--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-        <activity android:name=".SearchActivity"
-            android:theme="@style/AppTheme">
-        </activity>
+<!--        <activity android:name=".LoginActivity"></activity>-->
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashPageTheme">
