--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-<!--        <activity android:name=".LoginActivity"></activity>-->
+        <activity android:name=".NewMessageActivity"
+            android:theme="@style/AppThemeActionBar">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <!-- <activity android:name=".LoginActivity"></activity> -->
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashPageTheme">
